# BackportCpp

./: .codedocs  CMakeLists.txt  LICENSE  README.md  conanfile.py
.conan/test_package/: CMakeLists.txt  conanfile.py
.conan/test_package/src/: main.cpp
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: analysis.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  coverage.yml  deploy-conan.yml  deploy-doxygen-latest.yml  deploy-doxygen-release.yml  deploy-doxygen.yml  main.yml  scan-build.yml
api/latest/: annotated.html  annotated_dup.js  classes.html  dir_0ef14099a52aec164be4a56b0accb13c.html  dir_0ef14099a52aec164be4a56b0accb13c.js  dir_2a41bff87d72a0542ba07a8e02705da9.html  dir_2a41bff87d72a0542ba07a8e02705da9.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_11.dot  inherit_graph_11.md5  inherit_graph_12.dot  inherit_graph_12.md5  inherit_graph_13.dot  inherit_graph_13.md5  inherit_graph_14.dot  inherit_graph_14.md5  inherit_graph_15.dot  inherit_graph_16.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_17.md5  inherit_graph_18.dot  inherit_graph_18.md5  inherit_graph_19.dot  inherit_graph_2.dot  (+99 more)
api/latest/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  files_0.js  files_1.js  files_2.js  (+34 more)
api/v0.1.0/: annotated.html  dir_2a41bff87d72a0542ba07a8e02705da9.html  dir_2a41bff87d72a0542ba07a8e02705da9.js  files.html  hierarchy.js  index.html  inherit_graph_0.md5  inherit_graph_13.dot  inherit_graph_13.md5  inherit_graph_14.dot  inherit_graph_16.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_18.md5  inherit_graph_20.md5  inherit_graph_22.dot  inherit_graph_23.dot  inherit_graph_25.md5  inherit_graph_28.md5  inherit_graph_29.dot  inherit_graph_30.md5  inherit_graph_32.md5  inherit_graph_38.md5  inherit_graph_4.md5  inherit_graph_40.dot  inherit_graph_40.md5  inherit_graph_43.dot  inherit_graph_46.md5  inherit_graph_48.dot  inherit_graph_48.md5  inherit_graph_51.md5  inherit_graph_52.md5  inherits.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js
api/v0.1.0/search/: all_0.js  all_11.js  all_3.js  all_4.js  all_5.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js
api/v0.1.1/: classes.html  dir_2a41bff87d72a0542ba07a8e02705da9.js  functions.html  hierarchy.html  hierarchy.js  inherit_graph_1.md5  inherit_graph_13.md5  inherit_graph_14.md5  inherit_graph_16.dot  inherit_graph_18.dot  inherit_graph_29.dot  inherit_graph_3.dot  inherit_graph_31.dot  inherit_graph_41.dot  inherit_graph_5.md5  inherit_graph_50.md5  inherit_graph_9.dot  inherits.html  menudata.js
api/v0.1.1/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_b.js  all_e.js  all_f.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_7.js  functions_d.js  related_0.js  searchdata.js
api/v0.2.0/: functions.html  inherit_graph_17.dot  inherit_graph_21.md5  inherit_graph_24.md5  inherit_graph_30.md5  inherit_graph_54.md5  inherit_graph_58.md5  inherit_graph_69.md5
api/v1.0.0/: hierarchy.html  inherit_graph_1.md5  inherit_graph_14.md5  inherit_graph_15.md5  inherit_graph_18.dot  inherit_graph_2.md5  inherit_graph_21.dot  inherit_graph_67.md5  inherit_graph_9.md5  navtreedata.js
api/v1.0.1/: annotated.html  globals.html  inherit_graph_16.md5  inherit_graph_17.md5  inherit_graph_20.md5  inherit_graph_29.dot  inherit_graph_4.dot  inherit_graph_42.md5  inherit_graph_44.md5  inherit_graph_57.md5  inherit_graph_66.dot  inherit_graph_68.dot  inherit_graph_70.dot  inherit_graph_70.md5  inherit_graph_72.dot  inherit_graph_72.md5  navtreeindex3.js
api/v1.1.0/: classes.html  hierarchy.html  hierarchy.js  inherit_graph_1.dot  inherit_graph_10.md5  inherit_graph_50.dot  inherit_graph_6.md5  inherit_graph_66.md5  inherit_graph_67.dot  navtreeindex1.js  navtreeindex3.js
api/v1.2.0/: annotated.html  hierarchy.js  index.html  inherit_graph_16.dot  inherit_graph_17.dot  inherit_graph_17.md5  inherit_graph_21.md5  inherit_graph_29.md5  inherit_graph_35.md5  inherit_graph_5.md5  inherit_graph_56.dot  inherit_graph_63.dot  inherit_graph_64.md5  inherit_graph_70.dot  inherit_graph_71.md5  inherit_graph_73.dot  navtreedata.js  navtreeindex0.js  navtreeindex1.js
cmake/: AddSelfContainmentTest.cmake  SourceGroup.cmake
cmake/templates/: PackageConfig.cmake.in
doc/: commit-standards.md  installing.md  legal.md
include/bpstd/: any.hpp  chrono.hpp  complex.hpp  config.hpp  cstddef.hpp  exception.hpp  functional.hpp  iterator.hpp  memory.hpp  optional.hpp  span.hpp  string.hpp  string_view.hpp  tuple.hpp  type_traits.hpp  utility.hpp  variant.hpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/bpstd/: any.test.cpp  complex.test.cpp  exception.test.cpp  functional.test.cpp  iterator.test.cpp  memory.test.cpp  optional.test.cpp  span.test.cpp  string_view.test.cpp  tuple.test.cpp  type_traits.test.cpp  utility.test.cpp  variant.test.cpp
tools/: run-doxygen.py
(+773 files in other folders)
